Tue May  3 23:02:39 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* TAO_IDL/be/be_codegen.cpp:
	* TAO_IDL/be/be_visitor_typecode/alias_typecode.cpp:
	* TAO_IDL/be/be_visitor_typecode/objref_typecode.cpp:
	* TAO_IDL/be/be_visitor_typecode/struct_typecode.cpp:

	  Updated generated stubs to use latest TypeCode changes (header
	  rename, template parameter changes, etc).

	* tao/Alias_TypeCode.cpp:
	* tao/Alias_TypeCode.h:
	* tao/Alias_TypeCode.inl:
	* tao/Objref_TypeCode.cpp:
	* tao/Objref_TypeCode.h:
	* tao/Objref_TypeCode.inl:

	  Converted CORBA::TCKind template parameter to a constructor
	  parameter.  Allows a single instance of the TypeCode template in
	  question to represent multiple kinds of TypeCodes, rather than a
	  dedicated instance for each kind of TypeCode.  Reduces
	  footprint.

	* tao/Alias_TypeCode_Static.cpp:
	* tao/Alias_TypeCode_Static.h:
	* tao/Alias_TypeCode_Static.inl:
	* tao/Enum_TypeCode_Static.cpp:
	* tao/Enum_TypeCode_Static.h:
	* tao/Enum_TypeCode_Static.inl:
	* tao/Objref_TypeCode_Static.cpp:
	* tao/Objref_TypeCode_Static.h:
	* tao/Objref_TypeCode_Static.inl:
	* tao/Sequence_TypeCode_Static.cpp:
	* tao/Sequence_TypeCode_Static.h:
	* tao/Sequence_TypeCode_Static.inl:
	* tao/String_TypeCode_Static.cpp:
	* tao/String_TypeCode_Static.h:
	* tao/String_TypeCode_Static.inl:
	* tao/Struct_TypeCode_Static.cpp:
	* tao/Struct_TypeCode_Static.h:
	* tao/Struct_TypeCode_Static.inl:
	* tao/Union_TypeCode_Static.cpp:
	* tao/Union_TypeCode_Static.h:
	* tao/Union_TypeCode_Static.inl:
	* tao/Value_TypeCode_Static.cpp:
	* tao/Value_TypeCode_Static.h:
	* tao/Value_TypeCode_Static.inl:

	  New static TypeCode template specializations.  Works around
	  compilers that create multiple template instantiations, reducing
	  footprint greatly.

	* tao/Objref_TypeCode_Base.cpp:
	* tao/Objref_TypeCode_Base.h:
	* tao/Objref_TypeCode_Base.inl:

	  Removed these files.  They are no longer needed.

	* tao/Fixed_TypeCode.cpp:
	* tao/String_TypeCode.cpp: